my second  commit

--- a/climatechange.html
+++ b/climatechange.html
@@ -84,6 +84,7 @@
       <td>Adapting to the unavoidable impacts of climate change, such as through improved disaster preparedness, infrastructure resilience, and ecosystem-based approaches, is also necessary.</td>
     </tr>
   </table>
+  <script src="./js/main.js" defer></script>
 
 </body>
 </html>
